--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	line-height: 20px;
 	background-color: black;
 	color: white;
-	font-family: "Lucida Console", Courier, monospace;
+	font-family: Papyrus, "Lucida Console", Courier, monospace;
 	white-space: nowrap;
 	overflow: hidden;
 	box-sizing: border-box;
