--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	width: 1920px;
 	line-height: 20px;
 	background-color: black;
+	font-size: medium;
 	color: white;
 	font-family: Papyrus, "Lucida Console", Courier, monospace;
 	white-space: nowrap;
