--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	background-color: black;
 	font-size: medium;
 	color: white;
-	font-family: Papyrus, "Lucida Console", Courier, monospace;
+	font-family: "Lucida Console", Courier, monospace;
 	white-space: nowrap;
 	overflow: hidden;
 	box-sizing: border-box;
